[package]
name = "rickdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
crc32fast = "1.4.0"
env_logger = "0.11.3"
integer-encoding = "4.0.0"
itertools = "0.12.1"
log = "0.4.21"
skiplist = "0.5.1"
thiserror = "1.0.58"
